# tui-rs-tree-widget

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: coverage.yml  rust.yml
benches/: bench.rs
examples/: cargo_metadata.rs  custom_tree_item.rs  edit.rs  example.rs  files.rs  multiline.rs  singleline.rs
examples/util/: mod.rs
media/: screenshot.tape
src/: compose.rs  flatten.rs  generic_tree_item.rs  identifier.rs  item.rs  json.rs  key_value_tree_item.rs  lib.rs  node.rs  prerendered_tree_item.rs  recursive_select.rs  recursive_select_mut.rs  reflow.rs  simple_tree_item.rs  state.rs  tree_data.rs  tree_item.rs  tree_state.rs  unique_identifiers.rs
src/json/: json_tree_item.rs  mod.rs  render.rs  select.rs
src/tree_item/: flatten.rs  mod.rs
