[package]
name = "tui-tree-widget"
description = "Tree Widget for ratatui"
version = "0.20.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/tui-rs-tree-widget"
authors = ["EdJoPaTo <tui-tree-widget-rust-crate@edjopato.de>"]
edition = "2021"
keywords = ["tui", "terminal", "tree", "widget"]
categories = ["command-line-interface"]
include = ["src/**/*", "examples/**/*", "benches/**/*", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde_json = ["dep:serde_json"]

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.bench]
codegen-units = 1
debug = true
lto = true

[dependencies]
ratatui = { version = "0.26", default-features = false }
serde_json = { version = "1", optional = true, features = ["preserve_order"] }
unicode-width = "0.1"

[dev-dependencies]
criterion = "0.5"
crossterm = "0.27"
ratatui = "0.26"

[target.'cfg(target_family = "unix")'.dev-dependencies]
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[[bench]]
name = "bench"
harness = false
required-features = ["serde_json"]

[[example]]
name = "cargo_metadata"
required-features = ["serde_json"]
