[package]
name = "tui-tree-widget"
description = "Tree Widget for ratatui"
version = "0.23.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/tui-rs-tree-widget"
authors = ["EdJoPaTo <tui-tree-widget-rust-crate@edjopato.de>"]
edition = "2021"
rust-version = "1.74"
keywords = ["tui", "terminal", "tree", "widget"]
categories = ["command-line-interface"]
include = ["src/**/*", "examples/**/*", "benches/**/*", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes = "warn"
min_ident_chars = "warn"
unused_trait_names = "warn"

[profile.bench]
codegen-units = 1
debug = true
lto = true

[dependencies]
ratatui = { version = "0.29", default-features = false }
unicode-width = "0.2"

[dev-dependencies]
criterion = "0.5"
ratatui = "0.29"

[target.'cfg(target_family = "unix")'.dev-dependencies]
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }

[[bench]]
name = "bench"
harness = false
